--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
+@import url('https://fonts.googleapis.com/css?family=Azeret+Mono');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -18,4 +23,9 @@ code {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+}
+.ascii {
+    font-family: 'IBM Plex Mono';
+    color: 'black';
+    text-align: center;
 }
