--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,9 @@ code {
     font-family: 'IBM Plex Mono';
     color: 'black';
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
 }
