--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:100,200,300,400,500,600,700,800');
 @import url('https://fonts.googleapis.com/css?family=Azeret+Mono');
 @import url('https://fonts.googleapis.com/css?family=Space+Mono');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
@@ -7,9 +7,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
         'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    /* -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale; */
-    background-color: rgb(210, 210, 210);
+    background-color: rgb(180, 180, 180);
 }
 
 code {
@@ -75,7 +73,7 @@ input[type='button'] {
 }
 
 .dropdown {
-    width: 150px;
+    width: 100px;
     margin: 10px;
 }
 
