--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
         'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(240, 240, 240);
 }
 
 code {
@@ -17,8 +17,7 @@ code {
 .menu {
     margin: 10px;
     font-family: 'IBM Plex Mono';
-    color: 'black';
-    width: 200px;
+    width: 400px;
     font-size: 12px;
     text-align: center;
     border: 1px solid black;
@@ -67,9 +66,13 @@ input[type='button'] {
     text-align: center;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     transform: translate(-50%, -50%);
     z-index: -1;
+    min-height: 400px;
+    min-width: 300px;
+
+    padding: 40px;
 }
 
 .dropdown {
@@ -90,4 +93,20 @@ input[type='button'] {
     vertical-align: bottom;
     position: relative;
     top: -1px;
+}
+
+/* large background text */
+/* fixed postion, doesn't affect other elemnts of the DOM*/
+
+.background-text {
+    font-family: 'Helvetica';
+    font-size: 100px;
+    width: 800px;
+
+    position: fixed;
+    top: 10%;
+    left: 85%;
+    transform: translate(-50%, -50%);
+    color: white;
+    opacity: 0.7;
 }
