--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,24 @@ code {
 }
 
 .menu {
-    margin: 10px;
-    font-family: 'IBM Plex Mono';
-    width: 400px;
+    margin: 50px;
+    margin-top: 20px;
+    color: grey;
+    width: 200px;
     font-size: 12px;
     text-align: center;
-    border: 1px solid black;
+    /* border: 1px solid grey; */
+    align-items: center;
+    border-radius: 5px;
+    /* border: 1px solid rgb(128, 128, 128); */
+    box-shadow: inset 0 5px 15px rgba(255, 255, 255, 0.5), 0 2px 3px rgba(0, 0, 0, 0.2),
+        0 5px 10px rgba(0, 0, 0, 0.1);
+    /* blue to white diagonal gradient */
 }
 
 .menu-entry {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
 }
 
 input[type='file'] {
@@ -39,11 +46,12 @@ input[type='button'] {
 }
 
 .clickable-button {
-    border: 1px solid black;
+    border: 1px solid rgb(200, 200, 200, 1);
     padding: 2px;
     padding-left: 10px;
     padding-right: 10px;
     cursor: pointer;
+    border-radius: 2px;
 }
 
 .clickable-button:hover {
@@ -62,7 +70,7 @@ input[type='button'] {
 }
 .ascii {
     font-family: 'IBM Plex Mono';
-    color: 'black';
+    color: red;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -73,11 +81,6 @@ input[type='button'] {
     min-width: 300px;
 
     padding: 40px;
-}
-
-.dropdown {
-    width: 100px;
-    margin: 10px;
 }
 
 .checkboxes label {
