--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:100,200,300,400,500,600,700,800');
-@import url('https://fonts.googleapis.com/css?family=Azeret+Mono');
-@import url('https://fonts.googleapis.com/css?family=Space+Mono');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+@import url('https://fonts.googleapis.com/css?family=Azeret+Mono::100,200,300,400,500,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono::100,200,300,400,500,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono::100,200,300,400,500,600,700,800');
 
 body {
     margin: 0;
