--- a/src/ui/menu.css
+++ b/src/ui/menu.css
@@ -5,7 +5,7 @@
     font-size: 12px;
     padding-left: 20px;
     text-align: left;
-    background-color: white;
+    z-index: 1;
 }
 
 .menu-entry {
