--- a/src/ui/Menu/menu.css
+++ b/src/ui/Menu/menu.css
@@ -1,11 +1,25 @@
-.menu {
-    margin-top: 20px;
-    color: grey;
-    width: 150px;
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     font-size: 12px;
+    color: grey;
+    margin-top: 20px;
     padding-left: 20px;
+}
+
+.menu {
+    width: 150px;
     text-align: left;
-    z-index: 1;
+    z-index: 100;
+    background-color: rgb(255, 255, 255, 0.7);
+}
+
+.info-box {
+    border: 1px solid grey;
+    max-width: 200px;
+    height: 100px;
+    padding: 5px;
 }
 
 .menu-entry {
@@ -28,7 +42,7 @@ input[type='button'] {
     left: -99999rem;
 }
 
-.slider-asterix {
+.slider- terix {
     user-select: none;
     height: 10px;
     width: 10px;
@@ -86,6 +100,15 @@ input[type='button'] {
 
 .clickable-button:hover {
     background-color: lightgrey;
+}
+
+.highlighted-element {
+    /* display a red exclamtion mark */
+    color: blue;
+    font-size: 30px;
+    position: relative;
+    top: -2px;
+    left: 5px;
 }
 
 .hidden-button {
